// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSelect renders correctly 1`] = `
<div
  class="form-group"
  role="group"
>
   
  <!---->
   
  <select
    class="form-control-plaintext form-control-lg"
    id="some_id"
  >
    <option
      hidden="hidden"
      selected="selected"
      value=""
    >
      
        placeholder
      
    </option>
     
    <option
      data-key="0"
      value="Option 1"
    >
      
          Option 1
        
    </option>
    <option
      data-key="1"
      value="Option 2"
    >
      
          Option 2
        
    </option>
    <option
      data-key="2"
      value="Option 3"
    >
      
          Option 3
        
    </option>
  </select>
    
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
</div>
`;

exports[`CSelect renders correctly 2`] = `
<div
  class="form-group"
  role="group"
>
   
  <!---->
   
  <select
    class="custom-select custom-select-lg"
    id="some_id"
  >
    <!---->
     
    <option
      data-key="0"
      value="Option 1"
    >
      
          Option 1
        
    </option>
    <option
      data-key="1"
      value="Option 2"
    >
      
          Option 2
        
    </option>
    <option
      data-key="2"
      value="Option 3"
    >
      
          Option 3
        
    </option>
  </select>
    
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
</div>
`;

exports[`CSelect renders correctly 3`] = `
<div
  class="form-group was-validated"
  role="group"
>
  <label
    class="additional-label-class col-form-label-lg"
    for="some_id"
  >
    
        label
      
  </label>
   
  <div
    class="input-group input-group-lg"
  >
    <div
      class="input-group-prepend"
    >
      <span
        class="input-group-text"
      >
        prepended
      </span>
    </div>
     
    <select
      checked="checked"
      class="custom-select is-valid additional-input-class"
      id="some_id"
      inline="true"
    >
      <option
        hidden="hidden"
        selected="selected"
        value=""
      >
        
        placeholder
      
      </option>
       
      <option
        data-key="0"
        value="Option 1"
      >
        
          Option 1
        
      </option>
      <option
        data-key="1"
        value="Option 2"
      >
        
          Option 2
        
      </option>
      <option
        data-key="2"
        value="Option 3"
      >
        
          Option 3
        
      </option>
    </select>
      
    <div
      class="input-group-append"
    >
      <span
        class="input-group-text"
      >
        appended
      </span>
    </div>
     
    <div
      class="valid-tooltip"
    >
      input is valid
    </div>
     
    <div
      class="invalid-tooltip"
    >
      input is invalid
    </div>
     
    <small
      class="form-text text-muted w-100"
    >
      permission
    </small>
  </div>
</div>
`;
